# learnvectordb

./: .env.example  .gitignore  LICENSE  PRD.md  PgVectorResearch.md  README.md  pyproject.toml
data/: flashcards.csv.example  flashcards.json
docs/: RESEARCH_PGVECTOR.md  RESEARCH_TUI.md  RESEARCH_UV.md
scripts/: generate_conversations.py  run_flashcards.py  start-postgres.sh  stop-postgres.sh  update_conversations_csv.py
src/vectordb_learn/: __init__.py  app.py  config.py  logging.py  telemetry.py
src/vectordb_learn/csv/: __init__.py  loader.py
src/vectordb_learn/db/: __init__.py  connection.py  ingest.py  operations.py
src/vectordb_learn/embedding/: __init__.py  ollama.py  openrouter.py
src/vectordb_learn/flashcards/: __init__.py  generator.py  main.py
src/vectordb_learn/ui/: __init__.py  screens.py  styles.css  widgets.py
